# skse_plugin_template

./: Cargo.toml  cspell.jsonc  readme.md
.github/workflows/: build.yaml  release.yaml
crates/commonlibsse_ng_ext/: Cargo.toml
crates/core/: Cargo.toml
crates/dll_main/: Cargo.toml
crates/dll_main/src/: lib.rs
xtask/src/: main.rs
