[workspace.package]
authors = [""]                               # FIXME: Need edit
categories = ["encoding"]                    # FIXME: Need edit
description = "SKSE plugin creation library" # FIXME: Need edit
edition = "2024"
keywords = ["skyrim"]
license = "MIT OR Apache-2.0"                # FIXME: Need edit
readme = "README.md"
repository = "https://github.com"            # FIXME: Need edit
rust-version = "1.89"
version = "0.1.0"                            # TODO: Need Edit

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*", "xtask"]
default-members = ["crates/dll_main"]
resolver = "3"


[workspace.dependencies]
commonlibsse_ng = { git = "https://github.com/SARDONYX-sard/commonlibsse_ng", rev = "db98f80" }
serde = { version = "1.0.219" }                                                                 # Implement (De)Serializer
snafu = { version = "0.8.6" }                                                                   # To define error types.
tracing = { version = "0.1.41" }

windows = { version = "0.61.3" }

# Dev dependencies
pretty_assertions = "1.4.1" # Color diff assertion

# workspace members
commonlibsse_ng_ext = { path = "crates/commonlibsse_ng_ext" }
lib_core = { path = "crates/core" }

# Optional
# [workspace.lints.clippy]
# all = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }
