[package]
name = "lib_core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
atomic_enum = "0.3.0"
commonlibsse_ng = { workspace = true }
imgui = "0.12.0"                                # GUI
serde = { workspace = true }                    # Implement (De)Serializer
snafu = { workspace = true }                    # Error definitions
tracing = { workspace = true, optional = true } # Log

# workspace members
commonlibsse_ng_ext = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
  "Win32",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi_Common",
  "Win32_System",
  "Win32_UI",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
tracing = ["dep:tracing", "commonlibsse_ng/tracing"]
full = ["tracing"]
