[package]
name = "rust_skse_sample"     # FIXME: dll name -> e.g. `dll_main.dll`
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
commonlibsse_ng = { workspace = true, features = ["derive"] }
tracing = { workspace = true, optional = true }

# workspace members
lib_core = { workspace = true }


[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
default = ["full"]

tracing = ["dep:tracing", "commonlibsse_ng/tracing", "lib_core/tracing"]
full = ["tracing"]
